# This example shows how to use python
# Currently these languages have been tested:
#  perl tcl ruby php4 pike

FIND_PROGRAM(SWIG swig)
EXECUTE_PROCESS(COMMAND ${SWIG} -version OUTPUT_VARIABLE SWIGVERSIONOUT)
EXECUTE_PROCESS(COMMAND ${SWIG} -swiglib OUTPUT_VARIABLE SWIG_DIR)

STRING(REGEX REPLACE ".*SWIG Version \([0-9.]*\).*"  "\\1" SWIGVERSION ${SWIGVERSIONOUT} )
MESSAGE("SWIG Version ${SWIGVERSION}")
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/SDIF/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/SDIF/include)
SET(EASDIF_INC_DIR ${CMAKE_SOURCE_DIR})
SET(SDIF_INC_DIR ${CMAKE_SOURCE_DIR})
SET(EASDIF_BUILDINC_DIR ${CMAKE_BINARY_DIR})
SET(SDIF_BUILDINC_DIR ${CMAKE_BINARY_DIR})
CONFIGURE_FILE(easdif-common.i.in ${CMAKE_CURRENT_BINARY_DIR}/easdif-common.i)
CONFIGURE_FILE(sdif-common.i.in ${CMAKE_CURRENT_BINARY_DIR}/sdif-common.i)

SET(SWIG_COMMON_EASDIF_SRC ${CMAKE_CURRENT_SOURCE_DIR}/easdif-common-init.i ${CMAKE_CURRENT_BINARY_DIR}/easdif-common.i ${CMAKE_CURRENT_SOURCE_DIR}/easdif-defines.i)

ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(perl5)
ADD_SUBDIRECTORY(java)


SET(CMAKE_SWIG_FLAGS "")

